src/test/ui/keyword/keyword-super-as-identifier.stderr
error[E0433]: failed to resolve: there are too many initial `super`s.
  --> $DIR/keyword-super-as-identifier.rs:2:9
   |
LL |     let super = 22;
   |         ^^^^^ there are too many initial `super`s.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
