src/test/ui/keyword/keyword-super-as-identifier.rs
fn main() {
    let super = 22; //~ ERROR failed to resolve. There are too many initial `super`s
}
